Add GitHub-style project versioning
